fixing footer and activiy version mobile

--- a/style.css
+++ b/style.css
@@ -384,27 +384,6 @@ p {
   font-weight: bold;
 }
 
-/* #twin-pic1 {
-  max-height: 50%;
-}
-#twin-pic2 {
-}
-#twin-pic2 img {
-}
-
-#twin-pic3 {
-}
-#twin-pic4 { 
-}
-*/
-/*.activity figure:nth-child(4)>img{
-  height: 400px;
-  object-fit:cover;
-}
-.activity figure:nth-child(5)>img{
-  height: 190px;
-  object-fit:cover;
-}*/
 .activity h3 {
   display: flex;
   flex-direction: column;
@@ -440,10 +419,6 @@ footer a {
 @media screen and (min-width: 992px) {
 }
 @media screen and (max-width: 767px) {
-  /* * {
-    flex-direction: column;
-  } */
-
   header.container {
     padding: 0;
     flex-direction: column;
@@ -484,7 +459,25 @@ footer a {
     align-items: center;
     flex-direction: row;
   }
+  .filter:nth-child(0) {
+    order: 0;
+  }
+  .filter:nth-child(1) {
+    order: 1;
+  }
 
+  .filter:nth-child(2) {
+    order: 2;
+  }
+  .filter:nth-child(3) {
+    order: 3;
+  }
+  .filter:nth-child(4) {
+    order: 4;
+  }
+  .filter:nth-child(5) {
+    order: -1;
+  }
   .search form {
     background-color: #fff;
     display: flex;
@@ -524,8 +517,37 @@ footer a {
     width: 20px;
     font-size: xx-small;
   }
+  .section1 {
+    display: inline;
+  }
 
   .accomm {
+    flex-direction: column;
     order: 2;
   }
+  .activity {
+    display: block;
+    width: 100%;
+  }
+  .activity div {
+    display: block;
+    width: 100%;
+    gap: 10px;
+  }
+  .activity figure > img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+  }
+  .activity figure {
+    display: block;
+    width: 100%;
+  }
+
+  .activity .big {
+    height: 121px;
+  }
+}
+footer .container {
+  flex-direction: column;
 }
